# dingpiao

./: README.md  auto_booking.py  config.json  error_handler.py  main.py  main_app.py  models.py  pyproject.toml  ticket_manager.py  timed_booking.py
data/: passengers.json  tickets.json
python3.11/: main.py  pyproject.toml
